<resources>
    <string name="app_name">Curso.organize(BSI)</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Registre-se</string>
    <string name="action_continue_without_login">Continuar sem cadastro</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_profile">Perfil</string>
    <string name="loading_text">Carregando, aguarde...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_process_steps">ProcessStepsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="em_que_periodo_voc_ingressou_no_curso">Em que periodo você ingressou no curso?</string>
    <string name="text_first_entry">Primeira entrada</string>
    <string name="text_second_entry">Segunda entrada</string>
    <string name="text_button_continue">Continuar</string>
    <string name="text_button_exit">Sair</string>
    <string name="text_steps_first_access">Estamos aqui para ajudá-lo a formar seu cronograma de aulas =)\nPara isso iremos guiá-lo por um passo a passo, OK?</string>
    <string name="text_period_select">Em que período você ingressou no curso?</string>
    <string name="text_button_yes">Sim</string>
    <string name="text_button_no">Não</string>
    <string name="text_locking_period">Quantos períodos o curso passou trancado?</string>
    <string name="text_period_subjects">Atualize os status das cadeiras abaixo</string>
    <string name="text_locking_ask">Você já trancou o curso?</string>
    <string name="text_required_complement_ask">Você cursou alguma outra cadeira obrigatória?</string>
    <string name="text_optional_ask">Você já cursou alguma cadeira optativa?</string>
    <string name="text_exclude_optional_subject">Existe alguma optativa que você não deseja cursar?</string>
    <string name="text_finalize_ask">É isso mesmo?</string>

    <string name="title_activity_initial">InitialActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Curso.Organize(BSI)</string>
</resources>
