<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_period_select"
        android:textSize="26sp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_text_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_label"
        android:inputType="number"
        android:layout_marginTop="20dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_year"
        android:layout_marginTop="30dp">
        <RadioButton
            android:id="@+id/radio_first_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_first_entry"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_second_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_second_entry"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Button
        android:id="@+id/button_affirmative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/text_button_continue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
    <Button
        android:id="@+id/button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/text_button_exit"/>

</RelativeLayout>