<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:layout_centerHorizontal="true"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:layout_below="@+id/email"
            android:maxLines="1" />


    <Button
        android:id="@+id/sign_up_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true"
        android:text="@string/action_sign_up"
        android:background="@color/colorPrimary"/>

</RelativeLayout>