<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/text_label">
    </ListView>
    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_finalize_ask"
        android:textSize="26sp"
        android:layout_above="@+id/button_affirmative"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/button_affirmative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/text_button_yes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
    <Button
        android:id="@+id/button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/text_button_no"/>

</RelativeLayout>