<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text_label"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/text_locking_period"
        android:textSize="26sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/spinner"
        android:layout_below="@+id/text_label"
        android:layout_alignStart="@+id/text_label">
    </Spinner>
    <Button
        android:id="@+id/button_affirmative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/text_button_continue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
    <Button
        android:id="@+id/button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/text_button_exit"/>

</RelativeLayout>