<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:hint="Senha"
                android:imeActionId="@+id/login"
                android:layout_below="@+id/email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                />



        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            android:src="@drawable/login_icon"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="67dp"
            android:id="@+id/fab_sign_in"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/password"
            android:layout_alignStart="@+id/password" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:layout_below="@+id/fab_sign_in"
            android:layout_alignStart="@+id/fab_sign_in"
            android:layout_marginStart="10dp"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/register_icon"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            android:layout_marginLeft="26dp"
            android:id="@+id/fab_sign_up"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/password"
            android:layout_toEndOf="@+id/fab_sign_in" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_up"
            android:layout_below="@+id/fab_sign_in"
            android:layout_marginStart="-5dp"
            android:layout_alignStart="@+id/fab_sign_up"
            android:id="@+id/textView" />


        <Button
            android:id="@+id/continue_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/action_continue_without_login" />


</RelativeLayout>
