<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_locking_period"
        android:textSize="26sp"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_label"
        android:layout_marginTop="30dp"
        android:id="@+id/spinner">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Períodos"
        android:layout_alignBottom="@+id/spinner"
        android:layout_toEndOf="@+id/spinner"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/button_affirmative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/text_button_continue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
    <Button
        android:id="@+id/button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/text_button_exit"/>

</RelativeLayout>